--- a/etc/conf.templates/distributed/10-egress.conf.template
+++ b/etc/conf.templates/distributed/10-egress.conf.template
@@ -168,3 +168,13 @@ egress.fetch.batchsize = 10000
 ## The default value if 1000 ms
 ##
 #egress.runner.nonce.validity = 1000
+
+##
+## Set to true to only process directory queries when shards covering all partitions are available
+##
+#egress.directory.shards.strict = true
+
+##
+## Set to true to fail directory queries when accessing a shard produced an error
+##
+#egress.directory.shards.failonerror = true
