--- a/etc/conf.templates/distributed/10-headers.conf.template
+++ b/etc/conf.templates/distributed/10-headers.conf.template
@@ -1,5 +1,5 @@
 //
-//   Copyright 2019-2023  SenX S.A.S.
+//   Copyright 2019-2024  SenX S.A.S.
 //
 //   Licensed under the Apache License, Version 2.0 (the "License");
 //   you may not use this file except in compliance with the License.
@@ -23,6 +23,11 @@
 // Script line where an error was encountered
 //
 #http.header.error.line = 
+
+//
+// Script position where an error was encountered
+//
+#http.header.error.position =
 
 //
 // Message for the error that was encountered
